add functions in Owner Role

--- a/FPTBookWebClient/Views/Shared/_Layout.cshtml
+++ b/FPTBookWebClient/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>@ViewData["Title"] - FPTBook</title>
+	<link rel="icon" href="~/img/LOGO.jpg" />
 	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 	@*<link rel="stylesheet" href="~/FPTBook.styles.css" asp-append-version="true" />*@
@@ -39,7 +40,7 @@
 	<header>
 		<nav class="navbar-light bg-light d-flex flex-wrap justify-content-between py-4">
 			<div class="col-lg-3 col-md-12 ps-md-4 d-flex justify-content-center justify-content-lg-start align-items-center">
-				<img title="The Light Toy" onclick="location.href='/'" src="~/img/THELIGHTTOY.png" height="40"
+				<img title="The Light Toy" onclick="location.href='/'" src="~/img/LOGO.jpg" height="40"
 					 width="40" class="me-2" style="border-radius: 5px" role="button" />
 				<form id="formSearch" autocomplete="off" name="formSearch" class="d-flex input-group w-auto" action="/shop" method="GET" onsubmit="return formValid()">
 					<input type="hidden" name="page" value="1">
