create API display member and owner

--- a/FPTBookWebClient/Areas/Owners/Views/Book/Create.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Book/Create.cshtml
@@ -80,7 +80,7 @@
 			processData: false,
 			contentType: false,
 			success: function (result, status, xhr) {
-				window.location.href = 'https://localhost:7258/Owners/Book';
+				window.location.href = '/Owners/Book';
 			},
 			error: function (xhr, status, error) {
 				console.log(xhr);
