--- a/FPTBookWebClient/Views/Home/Detail.cshtml
+++ b/FPTBookWebClient/Views/Home/Detail.cshtml
@@ -54,7 +54,7 @@
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" id="review-tab" data-toggle="tab" href="#review" role="tab"
-					   aria-controls="review" aria-selected="false">Reviews (0)</a>
+					   aria-controls="review" aria-selected="false">Reviews (@Model.Feedbacks.Count)</a>
 				</li>
 			</ul>
 			<div class="tab-content" id="myTabContent">
@@ -109,31 +109,34 @@
 				<div class="tab-pane fade" id="review" role="tabpanel" aria-labelledby="review-tab">
 					<div class="tab-content" id="myTabContent">
 						<h3 class="box-title mt-5 mb-3">Feedback from customer</h3>
+						@if (Model.Feedbacks != null)
+						{
+							<table class="table table-striped table-product">
+								<thead class="fw-bold">
+									<tr>
+										<td width="25%">Full Name</td>
+										<td width="50%">Content</td>
+										<td width="25%">Date</td>
+									</tr>
+								</thead>
+								<tbody>
+									@foreach (var feedback in Model.Feedbacks)
+									{
+										<tr>
+											<td>@feedback.User.FirstName @feedback.User.LastName</td>
+											<td>@feedback.Content</td>
+											<td>@feedback.FeedDate</td>
+										</tr>
+									}
+								</tbody>
 
-						<table class="table table-striped table-product">
-							<thead class="fw-bold">
-								<tr>
-									<td>Full Name</td>
-									<td>Content</td>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td width="190">Nguyen Duy Quang</td>
-									<td>
-										Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-										tempor incididunt ut
-										labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-										exercitation ullamco
-										laboris nisi ut aliquip ex ea commodo consequat.
-									</td>
-								</tr>
-							</tbody>
-
-						</table>
-						<!-- if does not have any feedback -->
-						<div class="fw-bold">No feedback</div>
-
+							</table>
+						}
+						else
+						{
+							<!-- if does not have any feedback -->
+							<div class="fw-bold">No feedback</div>
+						}
 					</div>
 				</div>
 			</div>
