--- a/FPTBookWebClient/Views/Shared/_LoginPartial.cshtml
+++ b/FPTBookWebClient/Views/Shared/_LoginPartial.cshtml
@@ -4,11 +4,11 @@
 @inject SignInManager<AppUser> SignInManager
 @inject UserManager<AppUser> UserManager
 
-<div class="col-lg-3 col-md-12 col-12">
+<div class="col-lg-3 col-md-12 col-12 pe-lg-4">
 	@if (SignInManager.IsSignedIn(User))
 	{
 		<div class="nav navbar navbar-expand-md d-flex justify-content-center ms-lg-5 ms-xl-5">
-			<a class="text-dark" href="/cart">
+			<a class="text-dark" asp-controller="Cart" asp-action="Index">
 				<i class="bi bi-cart-fill"></i>
 			</a>
 			<a class="text-dark mx-5" href="/notification"><i class="bi bi-bell-fill"></i></a>
@@ -21,8 +21,8 @@
 						<a class="dropdown-item disabled">Hi @User.Identity?.Name!</a>
 					</li>
 					@*<li>
-				<a class="dropdown-item disabled">Hi @UserManager.GetUserId(User)</a>
-				</li>*@
+						<a class="dropdown-item disabled">Hi @UserManager.GetUserId(User)</a>
+					</li>*@
 					<li>
 						<a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a>
 					</li>
@@ -41,14 +41,6 @@
 				</ul>
 			</div>
 		</div>
-		@*<li class="nav-item">
-	<a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
-	</li>
-	<li class="nav-item">
-	<form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-	<button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-	</form>
-	</li>*@
 	}
 	else
 	{
