--- a/FPTBookWebClient/Views/Home/Detail.cshtml
+++ b/FPTBookWebClient/Views/Home/Detail.cshtml
@@ -34,14 +34,20 @@
 					<p>
 						@Model.BookDescription
 					</p>
+					<div>
+						Stock: <span id="stock">@Model.BookStock</span>
+					</div>
 					<div class="product-count">
 						<label for="size" class="mb-2">Quantity</label>
-						<form action="#" class="display-flex">
-							<div class="qtyminus">-</div>
-							<input type="text" name="quantity" value="1" class="qty">
-							<div class="qtyplus">+</div>
+						<form asp-controller="Cart" asp-action="AddToCart" asp-route-bookId="@Model.BookId" method="post">
+							<div class="d-flex">
+								<div class="qtyminus">-</div>
+								<input type="text" readonly name="quantity" value="1" class="qty" />
+								<div class="qtyplus">+</div>
+							</div>
+							<button type="submit" class="round-black-btn">Add to Cart</button>
 						</form>
-						<a href="#" class="round-black-btn">Add to Cart</a>
+
 					</div>
 				</div>
 			</div>
@@ -109,7 +115,7 @@
 				<div class="tab-pane fade" id="review" role="tabpanel" aria-labelledby="review-tab">
 					<div class="tab-content" id="myTabContent">
 						<h3 class="box-title mt-5 mb-3">Feedback from customer</h3>
-						@if (Model.Feedbacks != null)
+						@if (Model.Feedbacks.Count != 0)
 						{
 							<table class="table table-striped table-product">
 								<thead class="fw-bold">
@@ -163,8 +169,10 @@
 			})
 			$(".qtyplus").on("click", function () {
 				var now = $(".qty").val();
+				var stock = document.getElementById('stock').innerHTML;
 				if ($.isNumeric(now)) {
-					$(".qty").val(parseInt(now) + 1);
+					if (parseInt(now) + 1 <= parseInt(stock)) { now++; }
+					$(".qty").val(now);
 				}
 			});
 		});
