--- a/FPTBookWebClient/wwwroot/css/about.css
+++ b/FPTBookWebClient/wwwroot/css/about.css
@@ -1,6 +1,4 @@
-﻿@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,400italic);
-
-#about-main {
+﻿#about-main {
     font-family: "Open Sans", sans-serif;
     margin: 0 auto;
 }
