--- a/FPTBookWebClient/wwwroot/css/payment.css
+++ b/FPTBookWebClient/wwwroot/css/payment.css
@@ -1,21 +1,9 @@
-body {
-    background: #ddd;
-    font-family: "Open Sans", sans-serif;
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 0.8rem;
-}
-
 a {
     text-decoration: none;
 }
 
 .card {
-    /* max-width: 1000px; */
-    width: 90%;
-    margin: 2vh;
+    margin: 2vh 0;
 }
 
 .card-top {
@@ -83,7 +71,7 @@ a {
     padding: 2vh 0;
 }
 
-input {
+.input-payment {
     border: 1px solid rgba(0, 0, 0, 0.137);
     padding: 1vh;
     margin-bottom: 4vh;
@@ -92,7 +80,7 @@ input {
     background-color: rgb(247, 247, 247);
 }
 
-input:focus::-webkit-input-placeholder {
+.input-payment:focus::-webkit-input-placeholder {
     color: transparent;
 }
 
@@ -130,7 +118,7 @@ input:focus::-webkit-input-placeholder {
     line-height: 2;
 }
 
-.btn {
+.btn-payment {
     background-color: rgb(23, 4, 189);
     border-color: rgb(23, 4, 189);
     color: white;
@@ -141,7 +129,7 @@ input:focus::-webkit-input-placeholder {
     border-radius: 0;
 }
 
-.btn:focus {
+.btn-payment:focus {
     box-shadow: none;
     outline: none;
     box-shadow: none;
