--- a/FPTBookWebClient/wwwroot/css/style.css
+++ b/FPTBookWebClient/wwwroot/css/style.css
@@ -1,4 +1,31 @@
 /*--------------------------------------------------------------
+# General
+--------------------------------------------------------------*/
+body {
+    font-family: "Open Sans", sans-serif;
+    color: #585a61;
+}
+
+a {
+    color: #5777ba;
+    text-decoration: none;
+}
+
+    a:hover {
+        color: #7b94c9;
+        text-decoration: none;
+    }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Raleway", sans-serif;
+}
+
+/*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
 #footer {
