--- a/FPTBookWebClient/Areas/Owners/Views/Book/Create.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Book/Create.cshtml
@@ -16,7 +16,7 @@
 	</div>
 	<div class="form-group">
 		<label asp-for="BookDetail" class="form-label font-weight-bold"></label>
-		<input asp-for="BookDetail" class="form-control" required />
+		<textarea asp-for="BookDetail" class="form-control" required></textarea>
 		<span asp-validation-for="BookDetail" class="text-danger"></span>
 	</div>
 	<div class="form-group">
