--- a/FPTBookWebClient/Areas/Owners/Views/Publisher/Index.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Publisher/Index.cshtml
@@ -5,25 +5,16 @@
 <div class="pt-2 mb-2">
 	<h1 class="text-center">Publishers List</h1>
 	<div class="text-center mb-2 row">
-		<div class="col-6 d-flex justify-content-start align-items-center">
+		<div class="col-12 d-flex justify-content-center align-items-center">
 			<a asp-area="Owners" asp-controller="Publisher" asp-action="Create" class="btn btn-outline-info">
 				<i class="bi bi-plus-circle"></i>
 				Add
 			</a>
 		</div>
-		<div class="col-6 d-flex justify-content-end align-items-center">
-			<form action="/manage/category" method="GET" class="d-flex input-group w-auto">
-				<input name="search" type="search" class="form-control" placeholder="Search by name"
-					   aria-label="Search" aria-describedby="search-addon" />
-				<button class="btn btn-secondary searching" type="submit">
-					<i class="bi bi-search"></i>
-				</button>
-			</form>
-		</div>
 	</div>
-	<table class="table table-striped table-bordered m-0" cellspacing="0" width="100%">
-		<thead class="justify-content-md-between justify-content-sm-center align-content-center border-bottom border-2 my-2 bg-dark text-light p-3 rounded-3">
-			<tr class="text-center">
+	<table id="example" class="table table-striped" style="width:100%">
+		<thead>
+			<tr>
 				<th>
 					<strong>ID</strong>
 				</th>
@@ -49,17 +40,17 @@
 		</thead>
 		@foreach (var item in Model)
 		{
-			<tbody class="justify-content-md-between justify-content-sm-center border-bottom border-2 my-2 bg-light p-2 rounded-3">
+			<tbody>
 				<tr>
-					<td class="text-center align-middle">@item.PublisherId</td>
-					<td class="text-center align-middle">@item.PublisherName</td>
-					<td class="text-center align-middle">@item.PublisherPhone</td>
-					<td class="text-center align-middle">@item.PublisherMail</td>
-					<td class="text-center align-middle">@item.PublisherAddress</td>
-					<td class="text-center align-middle">
+					<td>@item.PublisherId</td>
+					<td>@item.PublisherName</td>
+					<td>@item.PublisherPhone</td>
+					<td>@item.PublisherMail</td>
+					<td>@item.PublisherAddress</td>
+					<td>
                         <a asp-area="Owners" asp-controller="Publisher" asp-action="Update" asp-route-id="@item.PublisherId"><i class="bi bi-pen-fill" style="color: black;"></i></a>
                     </td>
-                    <td class="text-center align-middle">
+                    <td>
                         <a asp-action="Delete" asp-route-id="@item.PublisherId" onclick="return confirm('Are you sure you want to delete this?')"><i class="bi bi-trash-fill" style="color: red;"></i></a>
                     </td>
 				</tr>
