--- a/FPTBookWebClient/Areas/Owners/Views/Genre/Update.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Genre/Update.cshtml
@@ -5,17 +5,17 @@
 <h1 class="text-center pb-4">Updating Genre</h1>
 <form asp-area="Owners" asp-controller="Genre" asp-action="Update" method="post">
 	<div asp-validation-summary="ModelOnly" class="text-danger"></div>
-	<div class="form-group">
-		<label class="form-label font-weight-bold">Genre Name</label>
+	<div class="form-outline mb-4">
+		<label class="form-label fw-bold">Genre Name</label>
 		<input asp-for="GenreName" class="form-control" required />
 		<span asp-validation-for="GenreName" class="text-danger"></span>
 	</div>
-	<div class="form-group">
-		<label class="form-label font-weight-bold">Genre Name</label>
+	<div class="form-outline mb-4">
+		<label class="form-label fw-bold">Genre Name</label>
 		<input asp-for="GenreDescription" class="form-control" required />
 		<span asp-validation-for="GenreDescription" class="text-danger"></span>
 	</div>
-	<div class="form-group text-center">
+	<div class="form-outline text-center">
 		<input type="submit" class="btn btn-info" asp-area="Owners" asp-controller="Genre" asp-action="Update" value="Update" />
 		<a class="btn btn-info" asp-action="Index">Cancel</a>
 	</div>
