--- a/FPTBookWebClient/Areas/Owners/Views/Contact/Index.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Contact/Index.cshtml
@@ -4,23 +4,9 @@
 }
 <div class="pt-2 mb-2">
 	<h1 class="text-center">Contacts List</h1>
-	<div class="text-center mb-2 row">
-		<div class="col-6 d-flex justify-content-start align-items-center">
-		</div>
-		<div class="col-6 d-flex justify-content-end align-items-center">
-			<form action="/manage/category" method="GET" class="d-flex input-group w-auto">
-				<input name="search" type="search" class="form-control" placeholder="Search by name"
-					   aria-label="Search" aria-describedby="search-addon" />
-				<button class="btn btn-secondary searching" type="submit">
-					<i class="bi bi-search"></i>
-				</button>
-			</form>
-		</div>
-	</div>
-	<table id="tablecategory" class="table table-striped table-bordered m-0" cellspacing="0"
-		   width="100%">
-		<thead class="justify-content-md-between justify-content-sm-center align-content-center border-bottom border-2 my-2 bg-dark text-light p-3 rounded-3">
-			<tr class="text-center">
+	<table id="example" class="table table-striped" style="width:100%">
+		<thead>
+			<tr>
 				<th>
 					<strong>ID</strong>
 				</th>
@@ -55,20 +41,20 @@
 		</thead>
 		@foreach (var item in Model)
 		{
-			<tbody class="justify-content-md-between justify-content-sm-center border-bottom border-2 my-2 bg-light p-2 rounded-3">
+			<tbody>
 				<tr>
-					<td class="text-center align-middle">@item.ContactId</td>
-					<td class="text-center align-middle">@item.ContactName</td>
-					<td class="text-center align-middle">@item.ContactEmail</td>
-					<td class="text-center align-middle">@item.ContactSubject</td>
-					<td class="text-center align-middle">@item.ContactMessage</td>
-					<td class="text-center align-middle">@item.Reply</td>
-					<td class="text-center align-middle">@item.ContactDate</td>
-					<td class="text-center align-middle">@item.ReplyDate</td>
-					<td class="text-center align-middle">
+					<td >@item.ContactId</td>
+					<td >@item.ContactName</td>
+					<td >@item.ContactEmail</td>
+					<td >@item.ContactSubject</td>
+					<td >@item.ContactMessage</td>
+					<td >@item.Reply</td>
+					<td >@item.ContactDate</td>
+					<td >@item.ReplyDate</td>
+					<td >
 						<a asp-area="Owners" asp-controller="Contact" asp-action="Update" asp-route-id="@item.ContactId"><i class="bi bi-pen-fill" style="color: black;"></i></a>
 					</td>
-					<td class="text-center align-middle">
+					<td >
 						<a asp-action="Delete" asp-route-id="@item.ContactId" onclick="return confirm('Are you sure you want to delete this?')"><i class="bi bi-trash-fill" style="color: red;"></i></a>
 					</td>
 				</tr>
