--- a/FPTBookWebClient/Areas/Owners/Views/Feedback/Index.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Feedback/Index.cshtml
@@ -4,23 +4,9 @@
 }
 <div class="pt-2 mb-2">
 	<h1 class="text-center">Feedback List</h1>
-	<div class="text-center mb-2 row">
-		<div class="col-6 d-flex justify-content-start align-items-center">
-		</div>
-		<div class="col-6 d-flex justify-content-end align-items-center">
-			<form action="/manage/category" method="GET" class="d-flex input-group w-auto">
-				<input name="search" type="search" class="form-control" placeholder="Search by name"
-					   aria-label="Search" aria-describedby="search-addon" />
-				<button class="btn btn-secondary searching" type="submit">
-					<i class="bi bi-search"></i>
-				</button>
-			</form>
-		</div>
-	</div>
-	<table id="tablecategory" class="table table-striped table-bordered m-0" cellspacing="0"
-		   width="100%">
-		<thead class="justify-content-md-between justify-content-sm-center align-content-center border-bottom border-2 my-2 bg-dark text-light p-3 rounded-3">
-			<tr class="text-center">
+	<table id="example" class="table table-striped" style="width:100%">
+		<thead>
+			<tr>
 				<th>
 					<strong>ID</strong>
 				</th>
@@ -49,15 +35,15 @@
 		</thead>
 		@foreach (var item in Model)
 		{
-			<tbody class="justify-content-md-between justify-content-sm-center border-bottom border-2 my-2 bg-light p-2 rounded-3">
+			<tbody>
 				<tr>
-					<td class="text-center align-middle">@item.FeedId</td>
-					<td class="text-center align-middle">@item.Content</td>
-					<td class="text-center align-middle">@item.FeedDate</td>
-					<td class="text-center align-middle">@item.User.UserName</td>
-					<td class="text-center align-middle">@item.Book.BookTitle</td>
-					<td class="text-center align-middle"><img src="@item.Book.BookImage" height="50%" width="50%" /></td>
-					<td class="text-center align-middle">
+					<td>@item.FeedId</td>
+					<td>@item.Content</td>
+					<td>@item.FeedDate</td>
+					<td>@item.User.UserName</td>
+					<td>@item.Book.BookTitle</td>
+					<td><img src="@item.Book.BookImage" height="80" width="50" /></td>
+					<td>
 						@if (item.FeedStatus == BusinessObjects.Constraints.FeedStatus.Unchecked)
 						{
 							<a class="btn btn-danger" width="10" height="10" asp-area="Owners" asp-controller="Feedback" asp-action="Accept" asp-route-id="@item.FeedId">
@@ -71,7 +57,7 @@
 							</a>
 						}
 					</td>
-					<td class="text-center align-middle">
+					<td>
 						<a asp-action="Delete" asp-route-id="@item.FeedId" onclick="return confirm('Are you sure you want to delete this?')"><i class="bi bi-trash-fill" style="color: red;"></i></a>
 					</td>
 				</tr>
