--- a/FPTBookWebClient/Areas/Owners/Views/Publisher/Create.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Publisher/Create.cshtml
@@ -5,27 +5,27 @@
 <h1 class="text-center pb-4">Adding Publisher</h1>
 <form asp-area="Owners" asp-controller="Publisher" asp-action="Create" method="post">
 	<div asp-validation-summary="ModelOnly" class="text-danger"></div>
-	<div class="form-group">
-		<label class="form-label font-weight-bold">Publisher Name</label>
+	<div class="form-outline mb-4">
+		<label class="form-label fw-bold">Publisher Name</label>
 		<input asp-for="PublisherName" class="form-control" required />
 		<span asp-validation-for="PublisherName" class="text-danger"></span>
 	</div>
-	<div class="form-group">
-		<label class="form-label font-weight-bold">Publisher Phone</label>
+	<div class="form-outline mb-4">
+		<label class="form-label fw-bold">Publisher Phone</label>
 		<input asp-for="PublisherPhone" class="form-control" required />
 		<span asp-validation-for="PublisherPhone" class="text-danger"></span>
 	</div>
-	<div class="form-group">
-		<label class="form-label font-weight-bold">Publisher Mail</label>
+	<div class="form-outline mb-4">
+		<label class="form-label fw-bold">Publisher Mail</label>
 		<input asp-for="PublisherMail" class="form-control" required />
 		<span asp-validation-for="PublisherMail" class="text-danger"></span>
 	</div>
-	<div class="form-group">
-		<label class="form-label font-weight-bold">Publisher Address</label>
+	<div class="form-outline mb-4">
+		<label class="form-label fw-bold">Publisher Address</label>
 		<input asp-for="PublisherAddress" class="form-control" required />
 		<span asp-validation-for="PublisherAddress" class="text-danger"></span>
 	</div>
-	<div class="form-group text-center">
+	<div class="form-outline text-center">
 		<input type="submit" class="btn btn-info" asp-area="Owners" asp-controller="Publisher" asp-action="Create" value="Add new" />
 		<a class="btn btn-info" asp-action="Index">Cancel</a>
 	</div>
