--- a/FPTBookWebClient/Views/Home/Shop.cshtml
+++ b/FPTBookWebClient/Views/Home/Shop.cshtml
@@ -58,7 +58,7 @@
 					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-12 mb-4">
 						<div class="card">
 							<div class="bg-image hover-zoom ripple" data-mdb-ripple-color="light">
-								<img src="@book.BookImage" class="w-100" />
+								<img src="@book.BookImage" class="w-100" style="width: 100%; height: 25rem;" />
 								<a asp-controller="Home" asp-action="Detail" asp-route-id="@book.BookId">
 									<div class="mask">
 										<div class="d-flex justify-content-start align-items-end h-100">
