fix UI home page

--- a/FPTBookWebClient/Areas/Owners/Views/Author/Update.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Author/Update.cshtml
@@ -21,7 +21,7 @@
 		<span asp-validation-for="AuthorMail" class="text-danger"></span>
 	</div>
 	<div class="form-outline text-center">
-		<input type="submit" class="btn btn-info" value="Add new" />
+		<input type="submit" class="btn btn-info" value="Update" />
 		<a class="btn btn-info" asp-action="Index">Cancel</a>
 	</div>
 </form>
