--- a/FPTBookWebClient/Views/Home/Index.cshtml
+++ b/FPTBookWebClient/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model ShowIndex
+@{
 	ViewData["Title"] = "Home Page";
 }
 @section stylesheets {
@@ -54,90 +55,14 @@
 		<div class="container" data-aos="fade-up">
 			<div class="gallery-slider swiper">
 				<div class="swiper-wrapper">
-					<div class="swiper-slide">
-						<a href="~/img/gallery/gallery-1.png" class="gallery-lightbox"
-						   data-gall="gallery-carousel">
-							<img src="~/img/gallery/gallery-1.png"
-								 class="img-fluid" alt="">
-						</a>
-					</div>
-					<div class="swiper-slide">
-						<a href="~/img/gallery/gallery-2.png" class="gallery-lightbox"
-						   data-gall="gallery-carousel">
-							<img src="~/img/gallery/gallery-2.png"
-								 class="img-fluid" alt="">
-						</a>
-					</div>
-					<div class="swiper-slide">
-						<a href="~/img/gallery/gallery-3.png" class="gallery-lightbox"
-						   data-gall="gallery-carousel">
-							<img src="~/img/gallery/gallery-3.png"
-								 class="img-fluid" alt="">
-						</a>
-					</div>
-					<div class="swiper-slide">
-						<a href="~/img/gallery/gallery-4.png" class="gallery-lightbox"
-						   data-gall="gallery-carousel">
-							<img src="~/img/gallery/gallery-4.png"
-								 class="img-fluid" alt="">
-						</a>
-					</div>
-					<div class="swiper-slide">
-						<a href="~/img/gallery/gallery-5.png" class="gallery-lightbox"
-						   data-gall="gallery-carousel">
-							<img src="~/img/gallery/gallery-5.png"
-								 class="img-fluid" alt="">
-						</a>
-					</div>
-					<div class="swiper-slide">
-						<a href="~/img/gallery/gallery-6.png" class="gallery-lightbox"
-						   data-gall="gallery-carousel">
-							<img src="~/img/gallery/gallery-6.png"
-								 class="img-fluid" alt="">
-						</a>
-					</div>
-					<div class="swiper-slide">
-						<a href="~/img/gallery/gallery-7.png" class="gallery-lightbox"
-						   data-gall="gallery-carousel">
-							<img src="~/img/gallery/gallery-7.png"
-								 class="img-fluid" alt="">
-						</a>
-					</div>
-					<div class="swiper-slide">
-						<a href="~/img/gallery/gallery-8.png" class="gallery-lightbox"
-						   data-gall="gallery-carousel">
-							<img src="~/img/gallery/gallery-8.png"
-								 class="img-fluid" alt="">
-						</a>
-					</div>
-					<div class="swiper-slide">
-						<a href="~/img/gallery/gallery-9.png" class="gallery-lightbox"
-						   data-gall="gallery-carousel">
-							<img src="~/img/gallery/gallery-9.png"
-								 class="img-fluid" alt="">
-						</a>
-					</div>
-					<div class="swiper-slide">
-						<a href="~/img/gallery/gallery-10.png" class="gallery-lightbox"
-						   data-gall="gallery-carousel">
-							<img src="~/img/gallery/gallery-10.png"
-								 class="img-fluid" alt="">
-						</a>
-					</div>
-					<div class="swiper-slide">
-						<a href="~/img/gallery/gallery-11.png" class="gallery-lightbox"
-						   data-gall="gallery-carousel">
-							<img src="~/img/gallery/gallery-11.png"
-								 class="img-fluid" alt="">
-						</a>
-					</div>
-					<div class="swiper-slide">
-						<a href="~/img/gallery/gallery-12.png" class="gallery-lightbox"
-						   data-gall="gallery-carousel">
-							<img src="~/img/gallery/gallery-12.png"
-								 class="img-fluid" alt="">
-						</a>
-					</div>
+					@foreach (var gallary in Model.Galleries)
+					{
+						<div class="swiper-slide">
+							<a href="@gallary.BookImage" class="gallery-lightbox" data-gall="gallery-carousel">
+								<img src="@gallary.BookImage" class="img-fluid" alt="@gallary.BookTitle">
+							</a>
+						</div>
+					}
 				</div>
 				<div class="swiper-pagination"></div>
 			</div>
@@ -186,90 +111,32 @@
 			</div>
 
 			<div class="row">
-				<div class="col-lg-3 mb-4">
-					<div class="card">
-						<img class="mx-auto" src="~/img/book/2.jpg" style="border: none;" width="100%" height="100%" />
-						<div class="card-body text-center mx-auto">
-							<h5 class="card-title fw-bold">Book Name</h5>
-							<div class="d-flex justify-content-center align-items-end">
-								<del>$50.00</del>
-								<p class="card-text ms-2"><b>$40.00</b></p>
+				@foreach (var best in Model.BestSellings)
+				{
+					decimal PriceSale = best.BookPrice - (best.BookPrice * ((decimal)best.SalePercent / 100m));
+					<div class="col-lg-3 mb-4">
+						<div class="card">
+							<img class="mx-auto" src="@best.BookImage" style="border: none;" width="100%" height="100%" />
+							<div class="card-body text-center mx-auto">
+								<h5 class="card-title fw-bold">@best.BookTitle</h5>
+								<div class="d-flex justify-content-center align-items-end">
+									@if (best.BookPrice != PriceSale)
+									{
+										<del>$@best.BookPrice.ToString("N2")</del>
+									}
+									<p class="card-text ms-2"><b>$@PriceSale.ToString("N2")</b></p>
+								</div>
+							</div>
+							<div class="card-body text-center mx-auto">
+								<a href="#" class="btn details px-auto text-dark fw-bold">view details</a><br />
+								<form asp-controller="Cart" asp-action="AddToCart" asp-route-bookId="@best.BookId" method="post" onsubmit="return CheckStock(@best.BookStock)" class="mb-2">
+									<input type="hidden" name="quantity" value="1">
+									<button type="submit" class="btn cart px-auto">ADD TO CART</button>
+								</form>
 							</div>
 						</div>
-						<div class="card-body text-center mx-auto">
-							<a href="#" class="btn details px-auto text-dark fw-bold">view details</a><br />
-							<form action="/cart/add" method="POST" class="mb-2">
-								<input type="hidden" name="quantity" value="1">
-								<input type="hidden" name="proid" value="" />
-								<input type="submit" name="addcart" class="btn cart px-auto"
-									   value="ADD TO CART" />
-							</form>
-						</div>
 					</div>
-				</div>
-				<div class="col-lg-3 mb-4">
-					<div class="card">
-						<img class="mx-auto" src="~/img/book/3.jpg" style="border: none;" width="100%" height="100%" />
-						<div class="card-body text-center mx-auto">
-							<h5 class="card-title fw-bold">Book Name</h5>
-							<div class="d-flex justify-content-center align-items-end">
-								<del>$50.00</del>
-								<p class="card-text ms-2"><b>$40.00</b></p>
-							</div>
-						</div>
-						<div class="card-body text-center mx-auto">
-							<a href="#" class="btn details px-auto text-dark fw-bold">view details</a><br />
-							<form action="/cart/add" method="POST" class="mb-2">
-								<input type="hidden" name="quantity" value="1">
-								<input type="hidden" name="proid" value="" />
-								<input type="submit" name="addcart" class="btn cart px-auto"
-									   value="ADD TO CART" />
-							</form>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3 mb-4">
-					<div class="card">
-						<img class="mx-auto" src="~/img/book/2.jpg" style="border: none;" width="100%" height="100%" />
-						<div class="card-body text-center mx-auto">
-							<h5 class="card-title fw-bold">Book Name</h5>
-							<div class="d-flex justify-content-center align-items-end">
-								<del>$50.00</del>
-								<p class="card-text ms-2"><b>$40.00</b></p>
-							</div>
-						</div>
-						<div class="card-body text-center mx-auto">
-							<a href="#" class="btn details px-auto text-dark fw-bold">view details</a><br />
-							<form action="/cart/add" method="POST" class="mb-2">
-								<input type="hidden" name="quantity" value="1">
-								<input type="hidden" name="proid" value="" />
-								<input type="submit" name="addcart" class="btn cart px-auto"
-									   value="ADD TO CART" />
-							</form>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3 mb-4">
-					<div class="card">
-						<img class="mx-auto" src="~/img/book/3.jpg" style="border: none;" width="100%" height="100%" />
-						<div class="card-body text-center mx-auto">
-							<h5 class="card-title fw-bold">Book Name</h5>
-							<div class="d-flex justify-content-center align-items-end">
-								<del>$50.00</del>
-								<p class="card-text ms-2"><b>$40.00</b></p>
-							</div>
-						</div>
-						<div class="card-body text-center mx-auto">
-							<a href="#" class="btn details px-auto text-dark fw-bold">view details</a><br />
-							<form action="/cart/add" method="POST" class="mb-2">
-								<input type="hidden" name="quantity" value="1">
-								<input type="hidden" name="proid" value="" />
-								<input type="submit" name="addcart" class="btn cart px-auto"
-									   value="ADD TO CART" />
-							</form>
-						</div>
-					</div>
-				</div>
+				}
 			</div>
 		</div>
 	</section>
